--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -10,8 +10,8 @@ on:
       - develop
   pull_request: 
     branches:
-      - main
       - develop
+  workflow_call:
       
 env:
   CARGO_TERM_COLOR: always
