--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Rust General
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -7,8 +7,11 @@ concurrency:
 on:
   push:
     branches:
-      - main
       - develop
+  pull_request: 
+    branches:
+      - develop
+  workflow_call:
       
 env:
   CARGO_TERM_COLOR: always
