--- a/.github/workflows/semver_check.yml
+++ b/.github/workflows/semver_check.yml
@@ -5,12 +5,11 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  push: 
-    branches:
-      - main
   pull_request: 
     branches:
       - main
+  workflow_call:
+    
 env:
   CARGO_TERM_COLOR: always
 
