--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -15,6 +15,8 @@ on:
       
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: -D warnings
+  RUSTDOCFLAGS: -D warnings
 
 jobs:
   test:
@@ -23,6 +25,9 @@ jobs:
     steps:
       - uses: wykies/checkout@main
       - uses: wykies/setup-rust-toolchain@main
+      # Uncomment if working on an egui project
+      # - name: Install egui dependencies
+      #   run: sudo apt-get install libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev
       - name: Run tests
         run: cargo test --all-features
 
@@ -35,7 +40,7 @@ jobs:
         with:
           components: rustfmt
       - name: Enforce formatting
-        run: cargo fmt --check
+        run: cargo fmt --all --check
 
   clippy:
     name: Clippy
