--- a/.github/workflows/egui_pages_deploy.yml
+++ b/.github/workflows/egui_pages_deploy.yml
@@ -18,8 +18,11 @@ jobs:
   run_tests:
     # https://docs.github.com/en/actions/sharing-automations/reusing-workflows#calling-a-reusable-workflow
     uses: ./.github/workflows/general.yml
+  check_wasm:
+    needs: run_tests
+    uses: ./.github/workflows/wasm.yml
   build-github-pages:
-    needs: run_tests # Requires that the other job succeeds before this one will start
+    needs: check_wasm
     runs-on: ubuntu-latest
     steps:
       - uses: wykies/checkout@main
