--- a/.github/workflows/egui_pages_deploy.yml
+++ b/.github/workflows/egui_pages_deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: ./trunk build --release --public-url $public_url
         env:
-          public_url: "https://dev.chester.wykies.com/{{ github.event.repository.name }}"
+          public_url: "https://dev.chester.wykies.com/${{ github.event.repository.name }}"
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
