--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,15 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
-egui = "0.30"
-eframe = { version = "0.30", default-features = false, features = [
-    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
-    "default_fonts", # Embed the default egui fonts.
-    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
-    "wayland",       # To support Linux (and CI)
+eframe = { version = "0.30", default-features = false, features = ["accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
+  "default_fonts", # Embed the default egui fonts.
+  "glow", # Use the glow rendering backend. Alternative: "wgpu".
+  "persistence", # Enable restoring app state when restarting the app.
+  "wayland", # To support Linux (and CI)
 ] }
+egui = "0.30"
 log = "0.4"
-
-# You only need serde if you want app persistence:
+reqwest-cross = { version = "0.5.0-dev", git = "https://github.com/c-git/reqwest-cross/", branch = "develop" }
 serde = { version = "1", features = ["derive"] }
 
 # native:
@@ -31,7 +29,7 @@ env_logger = "0.11"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
-web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
+web-sys = "0.3.70" # to access the DOM (to hide the loading text)
 
 [profile.release]
 opt-level = 2 # fast and small wasm
@@ -40,9 +38,7 @@ opt-level = 2 # fast and small wasm
 [profile.dev.package."*"]
 opt-level = 2
 
-
 [patch.crates-io]
-
 # If you want to use the bleeding edge version of egui and eframe:
 # egui = { git = "https://github.com/emilk/egui", branch = "master" }
 # eframe = { git = "https://github.com/emilk/egui", branch = "master" }
