--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,10 @@ eframe = { version = "0.30", default-features = false, features = ["accesskit", 
   "x11", # Support x11 systems
 ] }
 egui = "0.30"
+egui_extras = "0.30.0"
+ehttp = "0.5.0"
 log = "0.4"
+poll-promise = "0.3.0"
 reqwest-cross = { version = "0.5.0-dev", git = "https://github.com/c-git/reqwest-cross/", branch = "develop" }
 serde = { version = "1", features = ["derive"] }
 
