--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
-eframe = { version = "0.30", default-features = false, features = ["accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
+eframe = { version = "0.30", default-features = false, features = [ #
+  "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
   "glow", # Use the glow rendering backend. Alternative: "wgpu".
   "persistence", # Enable restoring app state when restarting the app.
@@ -19,9 +20,7 @@ eframe = { version = "0.30", default-features = false, features = ["accesskit", 
 ] }
 egui = "0.30"
 egui_extras = "0.30.0"
-ehttp = "0.5.0"
 log = "0.4"
-poll-promise = "0.3.0"
 reqwest-cross = { version = "0.5.0-dev", git = "https://github.com/c-git/reqwest-cross/", branch = "develop" }
 serde = { version = "1", features = ["derive"] }
 
