--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
+anyhow = "1.0.95"
 eframe = { version = "0.30", default-features = false, features = [ #
   "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
@@ -21,12 +22,14 @@ eframe = { version = "0.30", default-features = false, features = [ #
 egui = "0.30"
 egui_extras = "0.30.0"
 log = "0.4"
-reqwest-cross = { version = "0.5.0-dev", git = "https://github.com/c-git/reqwest-cross/", branch = "develop" }
+reqwest-cross = { version = "0.5.0-dev", path = "../reqwest-cross/", features = ["cookies", "egui"] }
 serde = { version = "1", features = ["derive"] }
+tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11"
+tokio = { version = "1.42.0", default-features = false, features = ["macros"] }
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
