--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
 anyhow = "1.0.95"
+chrono = "0.4.39"
 eframe = { version = "0.30", default-features = false, features = [ #
   "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
