--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,15 @@ eframe = { version = "0.30", default-features = false, features = [ #
 ] }
 egui = "0.30"
 egui_extras = "0.30.0"
-log = "0.4"
 reqwest-cross = { version = "0.5.0-dev", path = "../reqwest-cross/", features = ["cookies", "egui"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.41"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.11"
 tokio = { version = "1.42.0", default-features = false, features = ["macros"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
