--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+log = "0.4.22"
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3.70" # to access the DOM (to hide the loading text)
 
