--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "reqwest-w-egui-testing PWA",
-  "short_name": "reqwest-w-egui-testing-pwa",
+  "name": "http-client PWA",
+  "short_name": "http-client-pwa",
   "icons": [
     {
       "src": "./assets/icon-256.png",
