--- a/.github/workflows/egui_pages_deploy.yml
+++ b/.github/workflows/egui_pages_deploy.yml
@@ -29,6 +29,8 @@ jobs:
       - uses: wykies/setup-rust-toolchain@main
         with:
           target: wasm32-unknown-unknown
+      - name: Change to client folder
+        run: cd crates/client
       - name: Download and install Trunk binary
         run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - name: Build
