--- a/.github/workflows/egui_pages_deploy.yml
+++ b/.github/workflows/egui_pages_deploy.yml
@@ -31,16 +31,18 @@ jobs:
           target: wasm32-unknown-unknown
       - name: Change to client folder
         run: cd crates/client
-      - name: Download and install Trunk binary
-        run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+      - name: Install Trunk
+        uses: taiki-e/install-action@main
+        with:
+          tool: trunk
       - name: Build
-        run: ./trunk build --release --public-url $public_url
+        run: trunk build --release --public-url $public_url
         env:
           public_url: "https://dev.chester.wykies.com/${{ github.event.repository.name }}"
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
+          folder: ../server/app
           # this option will not maintain any history of your previous pages deployment
           # set to false if you want all page build to be committed to your gh-pages branch history
           single-commit: true
