--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ egui_extras = "0.30.0"
 log = "0.4.22"
 reqwest-cross = { git = "https://github.com/c-git/reqwest-cross", branch = "develop" }
 serde = "1"
-tokio = { version = "1.42.0", default-features = false }
+tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 wasm-bindgen-futures = "0.4"
