--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -22,7 +22,7 @@ tracing.workspace = true
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tokio.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 # web:
