--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
   "crates/client",
+  "crates/server",
 ]
 
 [workspace.dependencies]
@@ -15,7 +16,7 @@ reqwest-cross = { git = "https://github.com/c-git/reqwest-cross", branch = "deve
 serde = "1"
 tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3.70"
 
