--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -23,7 +23,7 @@ tracing.workspace = true
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio.workspace = true
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
+tracing-subscriber.workspace = true
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
