--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ opt-level = 2 # fast and small wasm
 
 # https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#testing-a-bugfix
 [patch.crates-io]
+shuttle-runtime = { git = "https://github.com/shuttle-hq/shuttle" }
