--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,20 @@ members = [
 ]
 
 [workspace.dependencies]
+actix-files = "0.6.6"
+actix-web = "4.3.1"
 anyhow = "1.0.95"
 chrono = "0.4.39"
 eframe = { version = "0.30", default-features = false }
 egui = "0.30"
 egui_extras = "0.30.0"
+futures-util = "0.3.31"
 log = "0.4.22"
 reqwest-cross = { git = "https://github.com/c-git/reqwest-cross", branch = "develop" }
-serde = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0.134"
+shuttle-actix-web = "0.49.0"
+shuttle-runtime = { version = "0.49.0", default-features = false }
 tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
