--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -11,8 +11,8 @@ anyhow.workspace = true
 futures-util.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-shuttle-actix-web.workspace = true
 shuttle-runtime.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+tracing-actix-web = "0.7.15"
 tracing-subscriber.workspace = true
