feat: implement cookies handlers

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -13,6 +13,7 @@ futures-util.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 shuttle-runtime.workspace = true
+thiserror = "2.0.9"
 tokio.workspace = true
 tracing.workspace = true
 tracing-actix-web = "0.7.15"
