--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 ]
 
 [workspace.dependencies]
+actix-cors = "0.7.0"
 actix-files = "0.6.6"
 actix-web = "4.3.1"
 anyhow = "1.0.95"
@@ -19,8 +20,10 @@ reqwest-cross = { git = "https://github.com/c-git/reqwest-cross", branch = "deve
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.134"
 shuttle-runtime = { version = "0.49.0", default-features = false }
+thiserror = "2.0.9"
 tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
+tracing-actix-web = "0.7.15"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3.70"
