--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-actix-cors = "0.7.0"
+actix-cors.workspace = true
 actix-files.workspace = true
 actix-web.workspace = true
 anyhow.workspace = true
@@ -13,8 +13,8 @@ futures-util.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 shuttle-runtime.workspace = true
-thiserror = "2.0.9"
+thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
-tracing-actix-web = "0.7.15"
+tracing-actix-web.workspace = true
 tracing-subscriber.workspace = true
